test/runnable/cov2.d
int main() {
	int counter = 20;
	do {
		--counter;
	}
	while(counter > 0);
	
	return 0;
}
